# sticky-notes

./: .gitignore  README.md  SYNC_SERVER_API.md  build-exe.ps1  build-fast-update.ps1  build-unpacked.ps1  index.html  main.js  package-lock.json  package.json  preload.js  renderer.js  style.css  sync-client.js
.github/workflows/: docker-publish.yml  releaser.yml
Tauri/: README.md  build-tauri.ps1
Tauri/src/: renderer.js
Tauri/src-tauri/: Cargo.toml  tauri.conf.json
Tauri/src-tauri/capabilities/: default.json
Tauri/src-tauri/src/: lib.rs  main.rs
sync-server/: .dockerignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  start-server.bat  sync-server.js
sync-server/public/: dashboard.html  login.html  style.css
