[package]
name = "my-sticky-notes"
version = "1.0.81"
description = "A sticky notes desktop app with rich text and API"
authors = ["Ahmad"]
edition = "2021"

[lib]
name = "my_sticky_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.18"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
